--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Poiret+One&display=swap" rel="stylesheet">
     <title>Tonson Porfolio</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
@@ -126,7 +128,9 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="blue.png" class="card-img-top" alt="..." />
+            <iframe class="preview" src="https://github.com/son1122/son1122.github.io">
+              <p>Your browser does not support iframes.</p>
+            </iframe>
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">
@@ -164,20 +168,20 @@
         role="button"
         >facebook</a>
         <p></p>
-        <p>2022 Wongsatorn Norrasing</p>
+        <p>Thank you for your Attention</p>
         <div class="foot-image">
         <p>
           <a href="http://jigsaw.w3.org/css-validator/check/referer">
               <img style="border:0;width:88px;height:31px"
                   src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
-                  alt="Valid CSS!" />
+                  alt="Valid CSS!"
+                  class="rounded float-left" />
               </a>
-          </p>
-          <p>
             <a href="http://jigsaw.w3.org/css-validator/check/referer">
                 <img style="border:0;width:88px;height:31px"
                     src="http://jigsaw.w3.org/css-validator/images/vcss"
-                    alt="Valid CSS!" />
+                    alt="Valid CSS!"
+                    class="rounded float-right" />
             </a>
         </p>
         </div>
