second prototype of my resume website

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
   </head>
   <body>
     <!-- Navigation bar at top -->
-    <nav class="navbar fixed-top" style="background-color:#5F94FA">
+    <nav class="navbar fixed-top" style="background-color:#0000005a">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#foo"><img src="blue.png" width="40" height="40" alt="Profile icon"></a>
+        <a class="navbar-brand" href="#foo"><img src="icon.jpeg" width="40" height="40" alt="Profile icon"></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -90,54 +90,56 @@
       <div class="row row-cols-1 row-cols-md-2 g-4">
         <div class="col">
           <div class="card">
-            <img src="blue.png" class="card-img-top" alt="..." />
+            <img src="CFD.png" class="card-img-top" alt="..." />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Flowww !!!!!</h5>
               <p class="card-text">
-                This is a longer card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
+                CFD Simulation
               </p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card">
-            <img src="blue.png" class="card-img-top" alt="..." />
+            <div class="embed-responsive embed-responsive-16by9">
+              <iframe height="300" style="width: 100%;" class="embed-responsive-item" src="compressor.mp4" allow="loop; autoplay;"></iframe>
+            </div>
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">It compress !!!</h5>
               <p class="card-text">
-                This is a longer card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
+                CFD Simulation of Gass Turbine Axial Compressor Section of RC Jet engine 
               </p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card">
-            <img src="blue.png" class="card-img-top" alt="..." />
+            <iframe height="300" style="width: 100%;" scrolling="no" title="Traffic Light JS" src="https://codepen.io/wongsatorn-norrasing/embed/QWrNRpz?default-tab=html%2Cresult" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+              See the Pen <a href="https://codepen.io/wongsatorn-norrasing/pen/QWrNRpz">
+              Traffic Light JS</a> by Wongsatorn Norrasing (<a href="https://codepen.io/wongsatorn-norrasing">@wongsatorn-norrasing</a>)
+              on <a href="https://codepen.io">CodePen</a>.
+            </iframe>
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Traffic !!!</h5>
               <p class="card-text">
-                This is a longer card with supporting text below as a natural
-                lead-in to additional content.
+                This is a part of test from GA and TDA TIP
               </p>
+              <a href="#" target="_blank" class="stretched-link"></a>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card">
-            <iframe class="preview" src="https://github.com/son1122/son1122.github.io">
+            <iframe height="300" style="width: 100%;" class="preview" src="https://son1122.github.io">
               <p>Your browser does not support iframes.</p>
             </iframe>
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Resume Preview</h5>
               <p class="card-text">
-                This is a longer card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
+                Preview of resume in Vertical oreintation
               </p>
+              <a href="https://codepen.io/wongsatorn-norrasing/pen/QWrNRpz" target="_blank" class="stretched-link"></a>
+
             </div>
           </div>
         </div>
@@ -148,25 +150,25 @@
     </div>
     <!-- Footer -->
     <footer class="bg-light text-white" id="foo">
-      <div class="text-center p-3" style="background-color:#5F94FA;">
+      <div class="text-center p-3" style="background-color:#00000049;">
         <a
         class="btn text-white btn-floating m-1"
         style="background-color: #333333;"
-        href="www.facebook.com"
+        href="https://web.facebook.com/sonwon1122"
         role="button"
-        >facebook</a>
+        >Facebook</a>
         <a
         class="btn text-white btn-floating m-1"
         style="background-color: #333333;"
-        href="www.facebook.com"
+        href="https://www.linkedin.com/in/wongsatorn-norrasing-086042205/"
         role="button"
-        >facebook</a>
+        >LinkedIn</a>
         <a
         class="btn text-white btn-floating m-1"
         style="background-color: #333333;"
-        href="www.facebook.com"
+        href="https://github.com/son1122"
         role="button"
-        >facebook</a>
+        >Github</a>
         <p></p>
         <p>Thank you for your Attention</p>
         <div class="foot-image">
