edit link in index

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
               <p class="card-text">
                 This is a part of test from GA and TDA TIP
               </p>
-              <a href="#" target="_blank" class="stretched-link"></a>
+              <a href="https://codepen.io/wongsatorn-norrasing/pen/QWrNRpz" target="_blank" class="stretched-link"></a>
             </div>
           </div>
         </div>
