fianl second prototype

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <!-- Profile Image -->
     <div class="text-center" id="user-image">
       <img
-        src="https://cdn.shopify.com/s/files/1/0059/8835/2052/products/Eastern_White_pine_9_FGT_650x.jpg?v=1629821576"
+        src="profile.jpg"
         alt="wongsatorn profile pict"
         class="img-fluid"
         width="300"
