--- a/index.html
+++ b/index.html
@@ -70,12 +70,9 @@
     </div>
 
     <div class="container-fluid">
-      <h3 class="text-center">Hell,My name is Wongsatorn.</h3>
+      <h3 class="text-center">Hello My name is Wongsatorn.</h3>
       <p class="text">
-        This is for test purpose This is for test purpose This is for test
-        purpose This is for test purpose This is for test purpose This is for
-        test purpose This is for test purpose This is for test purpose This is
-        for test purpose This is for test purpose This is for test purpose
+        I am mechanical/aerospace engineer that interset in programing.Right now i study software engineer immersive at True Digital Academy to be better understand at how Programming work.
       </p>
     </div>
     <!-- <div class="container-fluid">
