chacge file structure

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <!-- Profile Image -->
     <div class="text-center" id="user-image">
       <img
-        src="profile.jpg"
+        src="image/profile.jpg"
         alt="wongsatorn profile pict"
         class="img-fluid"
         width="300"
@@ -90,7 +90,7 @@
       <div class="row row-cols-1 row-cols-md-2 g-4">
         <div class="col">
           <div class="card">
-            <img src="CFD.png" class="card-img-top" alt="..." />
+            <img src="image/CFD.png" class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title">Flowww !!!!!</h5>
               <p class="card-text">
@@ -102,7 +102,7 @@
         <div class="col">
           <div class="card">
             <div class="embed-responsive embed-responsive-16by9">
-              <iframe height="300" style="width: 100%;" class="embed-responsive-item" src="compressor.mp4" allow="loop; autoplay;"></iframe>
+              <iframe height="300" style="width: 100%;" class="embed-responsive-item" src="video/compressor.mp4" allow="loop; autoplay;"></iframe>
             </div>
             <div class="card-body">
               <h5 class="card-title">It compress !!!</h5>
