--- a/portfolio/resume-wendy.html
+++ b/portfolio/resume-wendy.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-  <div class="line-ver"></div>
-  <div class="box"></div>
-  <head>
-    <link rel="stylesheet" href="style.css"/>
+<div class="line-ver"></div>
+<div class="box"></div>
+<head>
+    <link href="style.css" rel="stylesheet"/>
     <title>Wendy Bite | About Me</title>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  </head>
+    <meta content="IE=edge" http-equiv="X-UA-Compatible">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+</head>
 
-  <body>
-    <header>
-      <h1>Wendy G. Bite</h1>
-      <nav>
-        <a href="index.html" class="active">About Me</a>
+<body>
+<header>
+    <h1>Wendy G. Bite</h1>
+    <nav>
+        <a class="active" href="index.html">About Me</a>
         <a href="resume.html">Résumé</a>
-      </nav>
-    </header>
+    </nav>
+</header>
 
-    <div class="line"></div>
+<div class="line"></div>
 
-    <main>
-      <h2>RESUME</h2>
+<main>
+    <h2>RESUME</h2>
 
-      <p>
+    <p>
         i recently graduate .....
-      </p>
-      <h1>RELEVANT EXPERIENCE</h1>
-      <ul>
+    </p>
+    <h1>RELEVANT EXPERIENCE</h1>
+    <ul>
         <li>
             <p>Web Developer,GITHUB 2013 - present</p>
             <p>building Web</p>
@@ -49,31 +49,31 @@
             <p>Web Developer,GITHUB 2013 - present</p>
             <p>building Web</p>
         </li>
-      </ul>
-      <div class="line"></div>
-      <h1>RELEVANT EXPERIENCE</h1>
-      <ul>
-        <li>
-            <p>General Assembly</p>
-            <p>SEI</p>
-        </li>
-        <li>
-            <p>General Assembly</p>
-            <p>SEI</p>
-        </li>
-        <li>
-            <p>General Assembly</p>
-            <p>SEI</p>
-        </li>
-      </ul>
-    </main>
-
+    </ul>
     <div class="line"></div>
+    <h1>RELEVANT EXPERIENCE</h1>
+    <ul>
+        <li>
+            <p>General Assembly</p>
+            <p>SEI</p>
+        </li>
+        <li>
+            <p>General Assembly</p>
+            <p>SEI</p>
+        </li>
+        <li>
+            <p>General Assembly</p>
+            <p>SEI</p>
+        </li>
+    </ul>
+</main>
 
-    <footer>
-      <a href="#">Facebook</a> | <a href="#">Twitter</a> |
-      <a href="#">Instagram</a> |
-      <a href="#">LinkedIn</a>
-    </footer>
-  </body>
+<div class="line"></div>
+
+<footer>
+    <a href="#">Facebook</a> | <a href="#">Twitter</a> |
+    <a href="#">Instagram</a> |
+    <a href="#">LinkedIn</a>
+</footer>
+</body>
 </html>
