--- a/portfolio/wendy.html
+++ b/portfolio/wendy.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <div class="box"></div>
-  <head>
-    <link rel="stylesheet" href="style.css" />
+<div class="box"></div>
+<head>
+    <link href="style.css" rel="stylesheet"/>
     <title>Wendy Bite | About Me</title>
-    <meta charset="UTF-8" />
-  </head>
+    <meta charset="UTF-8"/>
+</head>
 
-  <body>
-    <header>
-      <h1>Wendy G. Bite</h1>
-      <nav>
-        <a href="index.html" class="active">About Me</a>
+<body>
+<header>
+    <h1>Wendy G. Bite</h1>
+    <nav>
+        <a class="active" href="index.html">About Me</a>
         <a href="resume.html">Résumé</a>
-      </nav>
-    </header>
+    </nav>
+</header>
 
-    <div class="line"></div>
+<div class="line"></div>
 
-    <main>
-      <h2>About Me</h2>
+<main>
+    <h2>About Me</h2>
 
-      <img src="images/Wendy-Bite.jpg" alt="This is Wendy Bite" />
+    <img alt="This is Wendy Bite" src="images/Wendy-Bite.jpg"/>
 
-      <p>
+    <p>
         The series revolves around four older, single women (three widows and
         one divorcée) sharing a house in Miami, Florida. The owner of the house
         is a widow named Blanche Devereaux (Rue McClanahan), who was joined by
@@ -33,22 +33,22 @@
         named Coco (Charles Levin), who was subsequently removed.[5] The three
         were soon joined by Dorothy"s mother, Sophia Petrillo (Estelle Getty),
         after the retirement home where she lived, Shady Pines, burned down.
-      </p>
+    </p>
 
-      <p>
+    <p>
         Thank You for being a friend. Travel down a road and back again. Your
         heart is true, you"re a pal and a confidante.And if you threw a party,
         invited everyone you knew, you would see the biggest gift would be from
         me and the card attached would say, Thank You For Being a Friend!
-      </p>
-    </main>
+    </p>
+</main>
 
-    <div class="line"></div>
+<div class="line"></div>
 
-    <footer>
-      <a href="#">Facebook</a> | <a href="#">Twitter</a> |
-      <a href="#">Instagram</a> |
-      <a href="resume.html">LinkedIn</a>
-    </footer>
-  </body>
+<footer>
+    <a href="#">Facebook</a> | <a href="#">Twitter</a> |
+    <a href="#">Instagram</a> |
+    <a href="resume.html">LinkedIn</a>
+</footer>
+</body>
 </html>
